manifests/default-backend/resources/namespace.yaml
---
apiVersion: v1
kind: Namespace
metadata:
  name: default-backend
  labels:
    shared-gateway-access: "true"
