manifests/default-backend/resources/http_route.yaml
apiVersion: gateway.networking.k8s.io/v1
kind: HTTPRoute
metadata:
  name: https
spec:
  hostnames:
  - k8s.nhlabs.org
  parentRefs:
  - group: gateway.networking.k8s.io
    kind: Gateway
    name: shared-gateway
    namespace: shared-gateway
    sectionName: https
  rules:
  - backendRefs:
    - group: ""
      kind: Service
      name: nginx-service
      port: 80
      weight: 1
    matches:
    - method: GET
      path:
        type: PathPrefix
        value: /
